Bug 1628732 - Don't notify block decision when uri is chrome r=timhuang,baku

Differential Revision: https://phabricator.services.mozilla.com/D73867